--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,20 @@
   <welcome-file-list>
   	<welcome-file>index.xhtml</welcome-file>
   </welcome-file-list>
+  
+  <listener>
+		<listener-class>
+		org.jboss.weld.environment.servlet.Listener
+		</listener-class>
+   </listener>
+	
+   <resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>
+		javax.enterprise.inject.spi.BeanManager
+		</resource-env-ref-type>
+	</resource-env-ref>	
+  
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
