--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,11 @@
 			<version>2.2.14</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
