--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
